--- a/service.yml
+++ b/service.yml
@@ -5,8 +5,8 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: emoji-app
+    app: emoji
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 8000
+      targetPort: 8000
       nodePort: 30001
